# dbflux

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  default.nix  flake.nix  rustfmt.toml
crates/dbflux/: Cargo.toml
crates/dbflux/src/: app.rs  assets.rs  cli.rs  config_loader.rs  hook_executor.rs  ipc_server.rs  main.rs  mcp_command.rs  platform.rs  proxy.rs
crates/dbflux/src/ui/: mod.rs  (+13 more)
crates/dbflux/tests/: architecture.rs  mcp_access_mode_parity_tests.rs  mcp_ui_governance_acceptance_tests.rs
crates/dbflux_app/: Cargo.toml
crates/dbflux_app/src/: access_manager.rs  app_state.rs  auth_provider_registry.rs  config_loader.rs  history_manager_sqlite.rs  hook_executor.rs  lib.rs  mcp_command.rs  portability.rs  proxy.rs  remote_dashboard_cache.rs  rpc_services.rs
crates/dbflux_approval/: Cargo.toml
crates/dbflux_approval/src/: lib.rs  service.rs  store.rs
crates/dbflux_audit/: Cargo.toml
crates/dbflux_audit/src/: export.rs  lib.rs  purge.rs  query.rs  redaction.rs
crates/dbflux_audit/tests/: audit_e2e_tests.rs  audit_service_tests.rs
crates/dbflux_aws/: Cargo.toml
crates/dbflux_aws/src/: accounts.rs  auth.rs  config.rs  edit.rs  lib.rs  parameters.rs  secrets.rs
crates/dbflux_components/: Cargo.toml
crates/dbflux_components/src/: actions.rs  density.rs  icon.rs  lib.rs  result_view.rs  saved_chart.rs  semantic.rs  style_guardrails.rs  tokens.rs  typography.rs
crates/dbflux_components/tests/: column_kind_contract.rs  result_panel_contract.rs  result_panel_slot_contract.rs  typography_contract.rs
crates/dbflux_core/: Cargo.toml
crates/dbflux_core/src/: app_config.rs  connection_hook.rs  connection_manager.rs  crud.rs  driver_capabilities.rs  driver_form.rs  error_formatter.rs  execution_context.rs  history.rs  item_manager.rs  key_value.rs  keymap_types.rs  language_service.rs  lib.rs  profile.rs  proxy_manager.rs  query.rs  query_safety.rs  recent_files.rs  saved_query.rs  schema_builder.rs  schema_node_id.rs  scripts_directory.rs  secret_manager.rs  session_facade.rs  sql_dialect.rs  ssh_tunnel_manager.rs  store.rs  table_browser.rs  task.rs  traits.rs  value.rs
crates/dbflux_core/tests/: connection_contract.rs  connection_hooks.rs
crates/dbflux_driver_cloudwatch/: Cargo.toml  README.md
crates/dbflux_driver_cloudwatch/src/: dashboard_import.rs  dashboard_source.rs  driver.rs  lib.rs
crates/dbflux_driver_dynamodb/: Cargo.toml  README.md
crates/dbflux_driver_dynamodb/src/: driver.rs  lib.rs  query_generator.rs  query_parser.rs
crates/dbflux_driver_dynamodb/tests/: live_integration.rs
crates/dbflux_driver_host/: Cargo.toml
crates/dbflux_driver_host/src/: main.rs  session.rs
crates/dbflux_driver_ipc/: Cargo.toml  README.md
crates/dbflux_driver_ipc/src/: connection.rs  driver.rs  lib.rs  transport.rs
crates/dbflux_driver_mongodb/: Cargo.toml  README.md
crates/dbflux_driver_mongodb/src/: driver.rs  language_service.rs  lib.rs  query_generator.rs  query_parser.rs
crates/dbflux_driver_mongodb/tests/: live_integration.rs
crates/dbflux_driver_mysql/: Cargo.toml  README.md
crates/dbflux_driver_mysql/src/: driver.rs  lib.rs
crates/dbflux_driver_mysql/tests/: ddl_integration.rs  live_integration.rs
crates/dbflux_driver_postgres/: Cargo.toml  README.md
crates/dbflux_driver_postgres/src/: driver.rs  lib.rs
crates/dbflux_driver_postgres/tests/: ddl_integration.rs  instance_catalog.rs  live_integration.rs  relational_filter_live.rs
crates/dbflux_driver_redis/: Cargo.toml  README.md
crates/dbflux_driver_redis/src/: driver.rs  language_service.rs  lib.rs
crates/dbflux_driver_redis/tests/: live_integration.rs
crates/dbflux_driver_redshift/: Cargo.toml  README.md
crates/dbflux_driver_redshift/src/: connection.rs  dialect.rs  driver.rs  error_formatter.rs  introspection.rs  lib.rs  types.rs
crates/dbflux_driver_redshift/tests/: live_integration.rs
crates/dbflux_driver_sqlite/: Cargo.toml  README.md
crates/dbflux_driver_sqlite/src/: driver.rs  lib.rs
crates/dbflux_driver_sqlite/tests/: ddl_integration.rs  live_integration.rs
crates/dbflux_export/: Cargo.toml
crates/dbflux_export/src/: binary.rs  csv.rs  json.rs  lib.rs  streaming.rs  text.rs
crates/dbflux_ipc/: Cargo.toml
crates/dbflux_ipc/src/: auth.rs  auth_provider_client.rs  auth_provider_protocol.rs  driver_protocol.rs  envelope.rs  framing.rs  lib.rs  protocol.rs  socket.rs
crates/dbflux_lua/: Cargo.toml
crates/dbflux_lua/src/: engine.rs  executor.rs  lib.rs
crates/dbflux_mcp/: Cargo.toml
crates/dbflux_mcp/src/: built_ins.rs  governance_service.rs  lib.rs  runtime.rs  tool_catalog.rs
crates/dbflux_mcp/tests/: approval_flow_tests.rs  audit_tools_tests.rs  capability_routing_tests.rs  discovery_query_runtime_tests.rs  governance_authorization_tests.rs  runtime_batch2_tests.rs  script_governance_tests.rs  tool_catalog_tests.rs  transport_integration_tests.rs
crates/dbflux_mcp_server/: Cargo.toml  README.md
crates/dbflux_mcp_server/docs/: DDL_SAFETY.md  WHERE_CLAUSE_SYNTAX.md
crates/dbflux_mcp_server/scripts/: validate_tools.sh
crates/dbflux_mcp_server/src/: bootstrap.rs  connection_cache.rs  error_messages.rs  governance.rs  helper.rs  lib.rs  server.rs  state.rs
crates/dbflux_mcp_server/tests/: integration_test.rs  integration_tests.rs
crates/dbflux_policy/: Cargo.toml
crates/dbflux_policy/src/: assignments.rs  classification.rs  engine.rs  lib.rs  schema_alter.rs  trusted_clients.rs
crates/dbflux_policy/tests/: classification_contract_tests.rs
crates/dbflux_portability/: Cargo.toml
crates/dbflux_portability/src/: bundle.rs  conflict.rs  encryption.rs  error.rs  export.rs  import.rs  lib.rs
crates/dbflux_proxy/: Cargo.toml
crates/dbflux_proxy/src/: lib.rs
crates/dbflux_proxy/tests/: live_integration.rs
crates/dbflux_ssh/: Cargo.toml
crates/dbflux_ssh/src/: lib.rs
crates/dbflux_ssm/: Cargo.toml
crates/dbflux_ssm/src/: lib.rs  process.rs
crates/dbflux_storage/: Cargo.toml
crates/dbflux_test_support/: Cargo.toml
(+846 files in other folders)
