[workspace]
members = [
    "crates/dbflux",
    "crates/dbflux_core",
    "crates/dbflux_ipc",
    "crates/dbflux_driver_ipc",
    "crates/dbflux_driver_sqlite",
    "crates/dbflux_driver_postgres",
    "crates/dbflux_driver_mysql",
    "crates/dbflux_driver_mongodb",
    "crates/dbflux_driver_redis",
    "crates/dbflux_ssh",
    "crates/dbflux_export",
    "crates/dbflux_driver_host",
]
default-members = ["crates/dbflux"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.3.4"
authors = ["Ignacio Perez <ignacio@feuer.me>"]
description = "A fast, keyboard-first database client"
repository = "https://github.com/0xErwin1/dbflux"
homepage = "https://github.com/0xErwin1/dbflux"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
dbflux = { path = "crates/dbflux" }
dbflux_core = { path = "crates/dbflux_core" }
dbflux_driver_sqlite = { path = "crates/dbflux_driver_sqlite" }
dbflux_driver_postgres = { path = "crates/dbflux_driver_postgres" }
dbflux_driver_mysql = { path = "crates/dbflux_driver_mysql" }
dbflux_driver_mongodb = { path = "crates/dbflux_driver_mongodb" }
dbflux_driver_redis = { path = "crates/dbflux_driver_redis" }
dbflux_ssh = { path = "crates/dbflux_ssh" }
dbflux_export = { path = "crates/dbflux_export" }
dbflux_ipc = { path = "crates/dbflux_ipc" }
dbflux_driver_ipc = { path = "crates/dbflux_driver_ipc" }
mysql = "25"

gpui = "0.2.2"
gpui-component = { version = "0.5.0", features = ["tree-sitter-languages"] }
core-text = ">=21.0.0, <21.1.0"
smallvec = "1.13.2"
rfd = "0.17"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-postgres = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
log = "0.4"
env_logger = "0.11"
fuzzy-matcher = "0.3"
hex = "0.4"
interprocess = "2.4"
