[package]
name = "dbflux"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "dbflux"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
dbflux_app.workspace = true
dbflux_ui = { workspace = true }
dbflux_core.workspace = true
dbflux_ipc.workspace = true
dbflux_driver_ipc.workspace = true
dbflux_audit.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
uuid.workspace = true
log.workspace = true
env_logger.workspace = true
serde_json.workspace = true
dirs.workspace = true
rfd.workspace = true
fuzzy-matcher.workspace = true
async-trait = "0.1"
anyhow = "1"
lsp-types = "0.97"
bincode = "1"
interprocess.workspace = true
open = "5"
indexmap.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies.dbflux_driver_sqlite]
workspace = true
optional = true

[dependencies.dbflux_driver_postgres]
workspace = true
optional = true

[dependencies.dbflux_driver_mysql]
workspace = true
optional = true

[dependencies.dbflux_driver_mongodb]
workspace = true
optional = true

[dependencies.dbflux_driver_redis]
workspace = true
optional = true

[dependencies.dbflux_driver_dynamodb]
workspace = true
optional = true

[dependencies.dbflux_aws]
workspace = true
optional = true

[dependencies.dbflux_ssm]
workspace = true
optional = true

[dependencies.dbflux_lua]
workspace = true
optional = true

[dependencies.dbflux_export]
workspace = true
optional = true

[dependencies.dbflux_ssh]
workspace = true
optional = true

[dependencies.dbflux_proxy]
workspace = true
optional = true

[dependencies.dbflux_mcp]
workspace = true
optional = true

[dependencies.dbflux_mcp_server]
workspace = true
optional = true

[dependencies.dbflux_policy]
workspace = true
optional = true

[dependencies.dbflux_approval]
workspace = true
optional = true

[features]
default = ["sqlite", "postgres", "mysql", "mongodb", "redis", "dynamodb", "lua", "aws", "mcp"]
sqlite = ["dbflux_app/sqlite", "dbflux_ui/sqlite"]
postgres = ["dbflux_app/postgres", "dbflux_ui/postgres"]
mysql = ["dbflux_app/mysql", "dbflux_ui/mysql"]
mongodb = ["dbflux_app/mongodb", "dbflux_ui/mongodb"]
redis = ["dbflux_app/redis", "dbflux_ui/redis"]
dynamodb = ["dbflux_app/dynamodb", "dbflux_ui/dynamodb"]
lua = ["dbflux_lua", "dbflux_app/lua", "dbflux_ui/lua"]
aws = ["dbflux_aws", "dbflux_ssm", "dbflux_app/aws", "dbflux_ui/aws"]
mcp = ["dbflux_mcp", "dbflux_mcp_server", "dbflux_policy", "dbflux_approval", "dbflux_app/mcp", "dbflux_ui/mcp"]
vendored-openssl = ["dbflux_ssh/vendored-openssl"]

[dev-dependencies]
dbflux_test_support.workspace = true
