[package]
name = "dbflux"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "dbflux"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
dbflux_app.workspace = true
dbflux_ui = { workspace = true }
dbflux_core = { workspace = true, features = ["tracing-bridge"] }
dbflux_ipc.workspace = true
dbflux_driver_ipc.workspace = true
dbflux_audit.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
log.workspace = true
interprocess.workspace = true
# rustls 0.23 refuses to auto-select a crypto provider when more than one
# backend is linked. This workspace links several (the AWS SDK pulls `ring`,
# reqwest and the TLS drivers pull `aws-lc-rs`), so the binary installs a
# process-wide default in `main`. Declared here to reach `rustls::crypto`.
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# The binary registers drivers and runtime features through `dbflux_app`, not
# directly. Optional dep declarations on driver crates would be dead weight
# (no `use ...` in this crate), so they live on `dbflux_app` instead. The few
# optional deps below exist only for feature passthroughs that this manifest
# itself exposes (e.g. `vendored-openssl` on `dbflux_ssh`).

[dependencies.dbflux_ssh]
workspace = true
optional = true

[features]
default = ["sqlite", "postgres", "mysql", "mongodb", "redis", "dynamodb", "cloudwatch", "influxdb", "mssql", "redshift", "lua", "aws", "mcp"]
# dbflux_ui is driver-agnostic, so driver features only drive dbflux_app (which
# registers the drivers and relays to the MCP server). The binary does not need
# to declare driver/runtime crates as direct optional deps — `dbflux_app/<feat>`
# pulls them in through dbflux_app's own optional deps.
sqlite = ["dbflux_app/sqlite"]
postgres = ["dbflux_app/postgres"]
mysql = ["dbflux_app/mysql"]
mongodb = ["dbflux_app/mongodb"]
redis = ["dbflux_app/redis"]
dynamodb = ["dbflux_app/dynamodb"]
cloudwatch = ["dbflux_app/cloudwatch"]
influxdb = ["dbflux_app/influxdb"]
mssql = ["dbflux_app/mssql"]
redshift = ["dbflux_app/redshift"]
lua = ["dbflux_app/lua", "dbflux_ui/lua"]
aws = ["dbflux_app/aws", "dbflux_ui/aws"]
mcp = ["dbflux_app/mcp", "dbflux_ui/mcp"]
vendored-openssl = ["dbflux_ssh/vendored-openssl"]

[dev-dependencies]
dbflux_test_support.workspace = true

[package.metadata.cargo-machete]
# tokio is declared to pin the rt-multi-thread+time features for the MCP runtime;
# no direct tokio:: calls appear in this crate's source because the runtime is
# driven through dbflux_app/dbflux_mcp_server.
# dbflux_ssh is an optional dep forwarded only to enable the vendored-openssl
# feature on the ssh crate; no source-level use of dbflux_ssh is needed.
ignored = ["tokio", "dbflux_ssh"]
