[package]
name = "dbflux_app"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "Pure domain modules for DBFlux (no GPUI dependency)"
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]

[dependencies]
dbflux_core.workspace = true
dbflux_storage.workspace = true
dbflux_ssh.workspace = true
dbflux_proxy.workspace = true
dbflux_audit.workspace = true
dbflux_ipc.workspace = true
dbflux_driver_ipc.workspace = true
dbflux_driver_sqlite = { workspace = true, optional = true }
dbflux_driver_postgres = { workspace = true, optional = true }
dbflux_driver_mysql = { workspace = true, optional = true }
dbflux_driver_mongodb = { workspace = true, optional = true }
dbflux_driver_redis = { workspace = true, optional = true }
dbflux_driver_dynamodb = { workspace = true, optional = true }
dbflux_driver_cloudwatch = { workspace = true, optional = true }
dbflux_lua = { workspace = true, optional = true }
dbflux_mcp = { workspace = true, optional = true }
dbflux_mcp_server = { workspace = true, optional = true }
dbflux_policy = { workspace = true, optional = true }
dbflux_aws = { workspace = true, optional = true }
dbflux_ssm = { workspace = true, optional = true }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
log.workspace = true
indexmap.workspace = true
async-trait = "0.1"

[features]
default = ["sqlite", "postgres", "mysql", "mongodb", "redis", "dynamodb", "cloudwatch"]
sqlite = ["dbflux_driver_sqlite"]
postgres = ["dbflux_driver_postgres"]
mysql = ["dbflux_driver_mysql"]
mongodb = ["dbflux_driver_mongodb"]
redis = ["dbflux_driver_redis"]
dynamodb = ["dbflux_driver_dynamodb"]
cloudwatch = ["dbflux_driver_cloudwatch"]
lua = ["dbflux_lua"]
aws = ["dbflux_aws", "dbflux_ssm"]
mcp = ["dbflux_mcp", "dbflux_mcp_server", "dbflux_policy"]
