[package]
name = "dbflux_aws"
version.workspace = true
publish = false
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core = { path = "../dbflux_core" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sso = "1"
aws-sdk-sts = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-ssm = "1"
async-trait = { workspace = true }
log = "0.4"
secrecy = "0.10"
tokio = { workspace = true, features = ["rt", "net", "time", "process", "fs"] }
uuid = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
sha1 = "0.10"
sha2 = "0.11"
futures-lite = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
filetime = "0.2"
