[package]
name = "dbflux_core"
edition.workspace = true
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
dirs = "5"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bitflags = "2.10.0"
tree-sitter = "0.25"
tree-sitter-sequel = "0.3"
urlencoding = "2"
tempfile = "3"
secrecy = "0.10"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
futures = "0.3"
dbflux_policy.workspace = true

[dev-dependencies]
dbflux_test_support.workspace = true
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
