[package]
name = "dbflux_core"
edition.workspace = true
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = "2"
dirs = { workspace = true }
log = "0.4"
chrono = { workspace = true }
bitflags = "2.10.0"
tree-sitter = "0.25"
tree-sitter-sequel = "0.3"
urlencoding = "2"
tempfile = "3"
secrecy = "0.10"
async-trait = { workspace = true }
tokio = { workspace = true, features = ["time"] }
futures = "0.3"
dbflux_policy.workspace = true
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }

[features]
mcp = []
tracing-bridge = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-log",
    "dep:tracing-appender",
]

[dev-dependencies]
dbflux_test_support.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
rusqlite = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
