[package]
name = "dbflux_driver_host"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Driver host process for DBFlux IPC architecture"
repository.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "dbflux-driver-host"
path = "src/main.rs"

[dependencies]
dbflux_core = { path = "../dbflux_core" }
dbflux_ipc = { path = "../dbflux_ipc" }
interprocess.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
log.workspace = true
env_logger.workspace = true

[features]
sqlite = ["dbflux_driver_sqlite"]
postgres = ["dbflux_driver_postgres"]
mysql = ["dbflux_driver_mysql"]
mongodb = ["dbflux_driver_mongodb"]
redis = ["dbflux_driver_redis"]

[dependencies.dbflux_driver_sqlite]
path = "../dbflux_driver_sqlite"
optional = true

[dependencies.dbflux_driver_postgres]
path = "../dbflux_driver_postgres"
optional = true

[dependencies.dbflux_driver_mysql]
path = "../dbflux_driver_mysql"
optional = true

[dependencies.dbflux_driver_mongodb]
path = "../dbflux_driver_mongodb"
optional = true

[dependencies.dbflux_driver_redis]
path = "../dbflux_driver_redis"
optional = true
