[package]
name = "dbflux_driver_ipc"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
dbflux_core = { path = "../dbflux_core" }
dbflux_ipc = { path = "../dbflux_ipc" }
interprocess.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
thiserror = "2.0"

[lib]
name = "dbflux_driver_ipc"
path = "src/lib.rs"
