[package]
name = "dbflux_driver_mysql"
version.workspace = true
edition.workspace = true
publish = false
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
dbflux_core.workspace = true
dbflux_ssh.workspace = true
hex.workspace = true
log.workspace = true
mysql.workspace = true
serde_json = "1"
urlencoding = "2"
uuid.workspace = true

[dev-dependencies]
dbflux_test_support.workspace = true

[lints]
workspace = true
