[package]
name = "dbflux_driver_postgres"
version = "0.1.0"
edition.workspace = true
publish = false
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
dbflux_core = { path = "../dbflux_core" }
dbflux_ssh = { path = "../dbflux_ssh" }
hex = "0.4"
log = "0.4"
native-tls = "0.2"
postgres = "0.19"
postgres-native-tls = "0.5"
serde_json = "1"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
