[package]
name = "dbflux_driver_redis"
version.workspace = true
edition.workspace = true
publish = false
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core.workspace = true
dbflux_ssh.workspace = true
log.workspace = true
redis = { version = "0.27", features = ["tls-rustls"] }
serde_json.workspace = true
urlencoding = "2"

[dev-dependencies]
dbflux_test_support.workspace = true

[lints]
workspace = true
