[package]
name = "dbflux_driver_sqlite"
version.workspace = true
edition.workspace = true
publish = false
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
dbflux_core = { path = "../dbflux_core" }
hex.workspace = true
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"

[dev-dependencies]
dbflux_test_support.workspace = true
tempfile = "3"

[lints]
workspace = true
