[package]
name = "dbflux_lua"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core = { path = "../dbflux_core" }
mlua = { workspace = true, features = ["lua54", "send", "vendored"] }
log.workspace = true

[dev-dependencies]
uuid.workspace = true
tempfile = "3"
