[package]
name = "dbflux_mcp_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Standalone headless MCP server for DBFlux"
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
name = "dbflux_mcp_server"
path = "src/lib.rs"

[features]
sqlite = ["dbflux_driver_sqlite"]
postgres = ["dbflux_driver_postgres"]
mysql = ["dbflux_driver_mysql"]
mongodb = ["dbflux_driver_mongodb"]
redis = ["dbflux_driver_redis"]
dynamodb = ["dbflux_driver_dynamodb"]
aws = ["dbflux_aws", "dbflux_ssm"]

[dependencies]
# DBFlux core crates
dbflux_core = { workspace = true }
dbflux_mcp = { workspace = true }
dbflux_policy = { workspace = true }
dbflux_approval = { workspace = true }
dbflux_audit = { workspace = true }
dbflux_storage = { workspace = true }

# Optional driver crates
dbflux_driver_sqlite = { workspace = true, optional = true }
dbflux_driver_postgres = { workspace = true, optional = true }
dbflux_driver_mysql = { workspace = true, optional = true }
dbflux_driver_mongodb = { workspace = true, optional = true }
dbflux_driver_redis = { workspace = true, optional = true }
dbflux_driver_dynamodb = { workspace = true, optional = true }
dbflux_aws = { workspace = true, optional = true }
dbflux_ssm = { workspace = true, optional = true }

# MCP SDK
rmcp = { version = "1.2.0", features = ["server", "macros", "transport-io"] }
schemars = "1.0"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "sync", "macros"] }

# Utilities
uuid = { workspace = true }
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
rusqlite.workspace = true

# Logging (keeping existing, will migrate to tracing later)
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
# Test support
dbflux_test_support = { workspace = true }
tempfile = "3.10"

# Async test runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
