[package]
name = "dbflux_mcp_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Standalone headless MCP server for DBFlux"
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
name = "dbflux_mcp_server"
path = "src/lib.rs"

[features]
sqlite = ["dbflux_driver_sqlite"]
postgres = ["dbflux_driver_postgres"]
mysql = ["dbflux_driver_mysql"]
mongodb = ["dbflux_driver_mongodb"]
redis = ["dbflux_driver_redis"]
dynamodb = ["dbflux_driver_dynamodb"]
redshift = ["dbflux_driver_redshift"]
aws = ["dbflux_aws", "dbflux_ssm"]

[dependencies]
# DBFlux core crates
dbflux_core = { workspace = true, features = ["tracing-bridge"] }
dbflux_mcp = { workspace = true }
dbflux_policy = { workspace = true }
dbflux_approval = { workspace = true }
dbflux_audit = { workspace = true }
dbflux_storage = { workspace = true }
dbflux_ipc = { workspace = true }

# Optional driver crates
dbflux_driver_sqlite = { workspace = true, optional = true }
dbflux_driver_postgres = { workspace = true, optional = true }
dbflux_driver_mysql = { workspace = true, optional = true }
dbflux_driver_mongodb = { workspace = true, optional = true }
dbflux_driver_redis = { workspace = true, optional = true }
dbflux_driver_dynamodb = { workspace = true, optional = true }
dbflux_driver_redshift = { workspace = true, optional = true }
dbflux_aws = { workspace = true, optional = true }
dbflux_ssm = { workspace = true, optional = true }

# MCP SDK
rmcp = { version = "1.2.0", features = ["server", "macros", "transport-io"] }
schemars = "1.0"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "sync", "macros"] }

# Utilities
uuid = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
rusqlite.workspace = true

log.workspace = true
tracing.workspace = true

[dev-dependencies]
# Test support
dbflux_test_support = { workspace = true }
tempfile = "3.10"

# Async test runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
