[package]
name = "dbflux_portability"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Connection bundle export/import for DBFlux"
repository.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["encryption"]
encryption = ["dep:age"]

[dependencies]
dbflux_core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
secrecy = { workspace = true }
chrono = { workspace = true }
age = { workspace = true, optional = true }

[lints]
workspace = true
