[package]
name = "dbflux_proxy"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core = { path = "../dbflux_core" }
dbflux_tunnel_core = { path = "../dbflux_tunnel_core" }
log = "0.4"
socks = "0.3"
native-tls = "0.2"

[dev-dependencies]
testcontainers = "0.15"
postgres = "0.19"
uuid.workspace = true
env_logger.workspace = true
